# simple-binary-encoding

./: .gitignore  CHANGELOG.adoc  CMakeLists.txt  build.gradle
.github/workflows/: ci.yml  codeql.yml  release.yml  slow.yml
buildSrc/: build.gradle
config/checkstyle/: checkstyle.xml
cppbuild/: cppbuild
csharp/sbe-dll/: sbe-dll.csproj
gocode/flyweight/src/otf/: otf_test.go
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/tests/: baseline_enum_from_str.rs  baseline_enum_into.rs  baseline_enum_to_str.rs  baseline_test.rs  basic_variable_length_schema_test.rs  big_endian_test.rs  extension_test.rs  fixed_sized_primitive_array.rs  issue_1066_test.rs  issue_435_test.rs  issue_895_test.rs  issue_972_test.rs  issue_984_test.rs  issue_987_test.rs  optional_field_nullify_test.rs
sbe-samples/src/main/resources/: example-schema.xml
sbe-tool/src/main/cpp/otf/: IrDecoder.h  Token.h
sbe-tool/src/main/golang/otf/: irdecoder.go  token.go
sbe-tool/src/main/java/uk/co/real_logic/sbe/: SbeTool.java  ValidationUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/: TargetCodeGeneratorLoader.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/common/: DtoValidationUtil.java  FieldPrecedenceModel.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/cpp/: CppDtoGenerator.java  CppGenerator.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/csharp/: CSharpDtoGenerator.java  CSharpGenerator.java  CSharpUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/golang/flyweight/: GolangFlyweightUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/golang/struct/: GolangGenerator.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/java/: JavaDtoGenerator.java  JavaGenerator.java  JavaUtil.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/rust/: LibRsDef.java  MessageCoderDef.java  RustGenerator.java  RustOutputManager.java  RustUtil.java  SubGroup.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/generation/ts/: PackageOutputManager.java  TypeScript.java  TypeScriptGenerator.java  TypeScriptOutputManager.java  TypeScriptUtil.java  package-info.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/ir/: IrDecoder.java  IrEncoder.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/json/: JsonTokenListener.java
sbe-tool/src/main/java/uk/co/real_logic/sbe/otf/: Types.java
sbe-tool/src/main/resources/: sbe-ir.xml
sbe-tool/src/propertyTest/java/uk/co/real_logic/sbe/properties/: DtosPropertyTest.java  JsonPropertyTest.java  PropertyTestUtil.java
sbe-tool/src/propertyTest/java/uk/co/real_logic/sbe/properties/arbitraries/: SbeArbitraries.java
sbe-tool/src/propertyTest/java/uk/co/real_logic/sbe/properties/schema/: TestXmlSchemaWriter.java
sbe-tool/src/propertyTest/java/uk/co/real_logic/sbe/properties/utils/: InMemoryOutputManager.java
sbe-tool/src/test/c/: CMakeLists.txt  CodeGenTest.cpp
sbe-tool/src/test/cpp/: CMakeLists.txt  CodeGenTest.cpp  DtoTest.cpp
sbe-tool/src/test/java/uk/co/real_logic/sbe/generation/common/: DtoValidationUtilTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/generation/cpp/: CppGeneratorTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/generation/csharp/: CSharpGeneratorTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/generation/golang/: GolangGeneratorTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/generation/java/: DtoTest.java  JavaGeneratorDeterminismTest.java  JavaGeneratorTest.java  QualifiedYieldTest.java
sbe-tool/src/test/java/uk/co/real_logic/sbe/ir/: BasicXmlIrGenerationTest.java  EncodedIrTest.java
sbe-tool/src/test/resources/: basic-variable-length-schema.xml  code-generation-schema.xml  custom-header-type.xml  dto-test-schema.xml  issue1057.xml  issue1066.xml  optional_enum_nullify.xml
ts/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
ts/bench/: index.html  index.ts
